[project]
name = "linklint"
description = "A link checker for Sphinx documentation"
readme = "README.rst"
authors = [
    {name = "Ned Batchelder", email = "ned@nedbatchelder.com"},
]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

requires-python = ">= 3.12"

dependencies = [
    "Sphinx",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "coverage",
  "pytest",
]

[project.scripts]
linklint = "linklint.linklint:main"

[tool.setuptools.dynamic]
version.attr = "linklint.__version__"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
