[project]
name = "linklint"
description = "A Sphinx extension to remove needless links"
readme = "README.rst"
authors = [
    {name = "Ned Batchelder", email = "ned@nedbatchelder.com"},
]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

requires-python = ">= 3.12"

dependencies = [
    "Sphinx",
]

dynamic = ["version"]

[project.urls]
Source = "https://github.com/nedbat/linklint"

[project.optional-dependencies]
dev = [
    "build",
    "coverage",
    "pytest",
    "ruff",
    "tox",
    "tox-uv",
    "ty",
]

[project.scripts]
linklint = "linklint.cli:main"

[tool.setuptools.dynamic]
version.attr = "linklint.__version__"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest]
filterwarnings = [
    # lib/python3.15/site-packages/pygments/regexopt.py:57: DeprecationWarning: os.path.commonprefix() is deprecated. Use os.path.commonpath() for longest path prefix.
    "ignore::DeprecationWarning:pygments",
]

[tool.coverage.paths]
source = [
    "src/linklint",
    "*/site-packages/linklint",
]
tests = [
    "tests",
    "*/linklint/tests",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["tests"]
source_pkgs = ["linklint"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "pragma: only failure",
    "pragma: debugging",
    "if SAVE_INTERMEDIATE:",
]
show_missing = true
skip_covered = true
